# tez-news-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  clean_master.py  convert_format.py  debug_fetch.py  docker-compose.yml  dump_html.py  extract_content.py  index_posts.py  inspect_structure.py  posts_index.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_bot.py  sample_article.html  server_setup.sh  split_output.py  test_single_url.py
.github/workflows/: ci.yml
spot_bot/: bot.py  config.py  errors.py  groq_client.py  help.py  history_db.py  jobs.py  logging_config.py  logging_setup.py  observability.py  pipeline.py  settings.py  summary.py  translation.py  translations.py
spot_bot/ai/: __init__.py  summarize.py
spot_bot/audio/: lang_detect.py  piper_engine.py  supertonic_engine.py  tts_generator.py  voice.py
spot_bot/cleaners/: html_cleaner.py  text_cleaner.py
spot_bot/delivery/: telegram_sender.py
spot_bot/handlers/: __init__.py  features.py
spot_bot/scrapers/: article_fetcher.py  browser_pool.py  rss_feed.py  telegram_channel.py
spot_bot/storage/: __init__.py  article_cache.py  db.py  favorites.py  filters.py  op_log.py  user_settings.py
spot_bot/utils/: retry.py
tests/: conftest.py  test_chunker.py  test_cleaner.py  test_delivery.py  test_errors.py  test_groq_retry.py  test_history_db.py  test_html_cleaner.py  test_image_album_send.py  test_image_extraction.py  test_lang_detect.py  test_pipeline_integration.py  test_post_id_propagation.py  test_retry.py  test_running_jobs.py  test_settings.py  test_settings_migration.py  test_smart_filters.py  test_storage.py  test_summarize.py  test_summary.py  test_supertonic_routing.py  test_telegram_channel.py  test_telegram_scrape.py  test_text_cleaner.py  test_title_match.py  test_voice_helpers.py
tests/fixtures/: tme_spotuz_latest.html
