[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spot-bot"
version = "0.1.0"
description = "Telegram bot that scrapes spot.uz news, cleans, and delivers with TTS audio."
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40,<2.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=4.9,<6.0",
    "python-telegram-bot[job-queue]>=20.0,<22.0",
    "edge-tts>=6.1,<8.0",
    "python-dotenv>=1.0,<2.0",
    "aiosqlite>=0.19,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
ai = [
    "anthropic>=0.40",
]

[tool.setuptools.packages.find]
include = ["spot_bot*"]
exclude = ["tests*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ---------------------------------------------------------------------------
# ruff (lint + import sort; replaces flake8 + isort)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line-too-long — handled by formatter
    "B008",  # function call in default arg — common for our config defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts in tests are fine

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
# Gradually tighten per-module. Start lenient so we can ship CI without
# drowning in errors, then ratchet up.
check_untyped_defs = false

[[tool.mypy.overrides]]
# Strict for our newer, cleanly-typed modules.
module = [
    "spot_bot.logging_config",
    "spot_bot.errors",
    "spot_bot.utils.*",
    "spot_bot.storage.*",
    "spot_bot.pipeline",
    "spot_bot.cleaners.*",
    "spot_bot.scrapers.browser_pool",
]
strict = true

[[tool.mypy.overrides]]
# python-telegram-bot types every Update attribute as Optional, which is
# technically correct but means command handlers (where message is always
# present) get drowned in union-attr noise. Silence it rather than
# wrapping every call in assertions that duplicate PTB's dispatch logic.
module = [
    "spot_bot.bot",
    "spot_bot.jobs",
    "spot_bot.handlers.*",
]
disable_error_code = ["union-attr", "type-arg"]
